--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,6 +16,18 @@
   align-items: center;
 }
 
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.background {
+  width: "100%";
+  height: "100vh";
+  background-repeat: "no-repeat";
+  background-size: "cover";
+}
+
 .footer {
   width: 100%;
   height: 100px;
