--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Oswald, sans-serif;
+  background-color: darkslategray;
 }
 
 a {
@@ -13,6 +15,9 @@ a {
 
 h1 {
   font-size: 3em;
+  font-weight: 400;
+  color: lightgray;
+  text-align: center;
 }
 
 * {
