--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,18 +5,13 @@ body {
   padding: 0;
   margin: 0;
   font-family: Oswald, sans-serif;
-  background-color: darkslategray;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  background-color: gainsboro;
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 5em;
   font-weight: 400;
-  color: lightgray;
+  color:#222222;
   text-align: center;
 }
 
