--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,20 +1,110 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Oswald, sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
   background-color: rgb(34,34,34);
 }
 
 h1 {
+  font-family: Oswald, sans-serif;
   font-size: 5em;
   font-weight: 400;
   color:#FFFFFF;
   text-align: center;
 }
 
+h2 {
+  font-family: Oswald, sans-serif;
+  font-size: 3em;
+  font-weight: 400;
+  color:#FFFFFF;
+  margin: 1rem 0rem;
+}
+
+h3 {
+  font-family: Oswald, sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+  color:#f35b04;
+  margin: 1rem;
+}
+
 * {
   box-sizing: border-box;
+}
+
+
+nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 400px;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 400px;
+  background: #fff;
+}
+
+button {
+  outline: none;
+  border: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  cursor: pointer;
+  position: absolute;
+  top: 18px;
+  left: 15px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: transparent;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  padding: 16px 24px;
+  position: absolute;
+  top: 100px;
+  width: 320px;
+}
+
+li {
+  list-style: none;
+  margin-bottom: 0px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+
+.refresh {
+  padding: 10px;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  width: 20px;
+  height: 20px;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
